--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,7 @@
     <string name="email_field_invalid">Not a valid email</string>
     <string name="password_field_small_length">Password less than 6 digits</string>
     <string name="login_button_text">Login</string>
+    <string name="or_textView_text">OR</string>
+    <string name="signUp_textView_text">Sign Up with Email</string>
 
 </resources>
