--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,14 +11,27 @@
 
 
    <!--login-->
-    <string name="email_field_hint">Enter your email</string>
-    <string name="password_field_hint">Enter your password</string>
-    <string name="email_field_empty">Email can\'t be empty</string>
-    <string name="password_field_empty">Password can\'t be empty</string>
-    <string name="email_field_invalid">Not a valid email</string>
-    <string name="password_field_small_length">Password less than 6 digits</string>
-    <string name="login_button_text">Login</string>
-    <string name="or_textView_text">OR</string>
-    <string name="signUp_textView_text">Sign Up with Email</string>
+    <string name="login_email_field_hint">Enter your email</string>
+    <string name="login_password_field_hint">Enter your password</string>
+    <string name="login_email_field_empty">Email can\'t be empty</string>
+    <string name="login_password_field_empty">Password can\'t be empty</string>
+    <string name="login_email_field_invalid">Not a valid email</string>
+    <string name="login_password_field_small_length">Password less than 6 digits</string>
+    <string name="login_login_button_text">Login</string>
+    <string name="login_or_textView_text">OR</string>
+    <string name="login_signUp_textView_text">Sign Up with Email</string>
+
+    <!--sign up-->
+    <string name="signUp_fullName_field_hint">Enter your full name</string>
+    <string name="signUp_email_field_hint">@string/login_email_field_hint</string>
+    <string name="signUp_password_field_hint">Choose your password</string>
+    <string name="signUp_fullName_field_empty">fullName can\'t be empty </string>
+    <string name="signUp_email_field_empty">@string/login_email_field_empty</string>
+    <string name="signUp_password_field_empty">@string/login_password_field_empty</string>
+    <string name="signUp_email_field_invalid">@string/login_email_field_invalid</string>
+    <string name="signUp_password_field_small_length">@string/login_password_field_small_length</string>
+    <string name="signUp_button_text">SIGN UP</string>
+    <string name="signUp_or_textView_text">@string/login_or_textView_text</string>
+    <string name="signUp_login_textView_text">Login with Email</string>
 
 </resources>
